<resources>
    <string name="app_name">Layout</string>
    <string name="title_1">1</string>
    <string name="title_2">2</string>
    <string name="title_3">3</string>
    <string name="title_4">4</string>
    <string name="title_5">5</string>
    <string name="title_6">6</string>
    <string name="title_7">7</string>
    <string name="title_8">8</string>
    <string name="title_9">9</string>
    <string name="color_name_green">Green</string>
    <string name="color_name_blue">Blue</string>
    <string name="color_name_red">Red</string>
    <string name="color_name_purple">Purple</string>
    <string name="color_name_yellow">Yellow</string>
    <string name="color_name_orange">Orange</string>
    <string name="title_first">First</string>
    <string name="title_second">Second</string>
    <string name="title_three">Three</string>
    <string name="title_four">Four</string>
    <string name="title_five">Five</string>
    <string name="title_top_content">Top content here</string>
    <string name="title_bottom_content">Bottom content here</string>
</resources>