<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:background="@color/yellow"
        android:gravity="center"
        android:text="@string/title_6"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="34sp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:layout_alignParentEnd="true"
        android:background="@color/purple"
        android:gravity="center"
        android:text="@string/title_7"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="34sp" />

    <RelativeLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="120dp"
            android:layout_height="48dp"
            android:layout_centerInParent="true"
            android:background="@color/green"
            android:gravity="center"
            android:text="@string/title_1"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="120dp"
            android:layout_height="48dp"
            android:layout_above="@id/textView"
            android:layout_toStartOf="@id/textView"
            android:background="@color/blue"
            android:gravity="center"
            android:text="@string/title_2"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="120dp"
            android:layout_height="48dp"
            android:layout_above="@id/textView"
            android:layout_toEndOf="@id/textView"
            android:background="@color/red"
            android:gravity="center"
            android:text="@string/title_4"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="120dp"
            android:layout_height="48dp"
            android:layout_below="@id/textView"
            android:layout_toStartOf="@id/textView"
            android:background="@color/purple"
            android:gravity="center"
            android:text="@string/title_3"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="120dp"
            android:layout_height="48dp"
            android:layout_below="@id/textView"
            android:layout_toEndOf="@id/textView"
            android:background="@color/yellow"
            android:gravity="center"
            android:text="@string/title_5"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="34sp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:background="@color/purple"
        android:gravity="center"
        android:text="@string/title_8"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="34sp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:background="@color/red"
        android:gravity="center"
        android:text="@string/title_9"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="34sp" />
</RelativeLayout>