<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@color/yellow"
        android:gravity="center"
        android:text="@string/title_top_content"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="34sp"/>

    <RelativeLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/green"
            android:gravity="center"
            android:text="@string/title_first"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="34sp"
            android:translationX="-10dp" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/textView"
            android:background="@color/blue"
            android:gravity="center"
            android:text="@string/title_second"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/textView1"
            android:background="@color/red"
            android:gravity="center"
            android:text="@string/title_three"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="34sp"
            android:translationX="10dp" />

    </RelativeLayout>
    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/black"
        android:gravity="center"
        android:text="@string/title_bottom_content"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="34sp"/>
</RelativeLayout>