<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/purple"
            android:gravity="center"
            android:text="@string/title_1"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="34sp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/blue"
                android:gravity="center"
                android:text="@string/title_2"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/yellow"
                android:gravity="center"
                android:text="@string/title_3"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="34sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/red"
            android:gravity="center"
            android:text="@string/title_4"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="34sp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/blue"
                android:gravity="center"
                android:text="@string/title_5"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/yellow"
                android:gravity="center"
                android:text="@string/title_6"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="34sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/green"
                android:gravity="center"
                android:text="@string/title_7"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/purple"
                android:gravity="center"
                android:text="@string/title_8"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/red"
                android:gravity="center"
                android:text="@string/title_9"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="34sp" />

        </LinearLayout>

    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>