<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/green"
        android:gravity="center"
        android:text="@string/color_name_green"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="34sp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:background="@color/blue"
        android:gravity="center"
        android:text="@string/color_name_blue"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="34sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView1"
        android:background="@color/red"
        android:gravity="center"
        android:text="@string/color_name_red"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="34sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView2"
        android:background="@color/purple"
        android:gravity="center"
        android:text="@string/color_name_purple"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="34sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView3"
        android:background="@color/yellow"
        android:gravity="center"
        android:text="@string/color_name_yellow"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="34sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView4"
        android:background="@color/green"
        android:gravity="center"
        android:text="@string/color_name_green"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="34sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView5"
        android:background="@color/red"
        android:gravity="center"
        android:text="@string/color_name_red"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="34sp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView6"
        android:background="@color/purple"
        android:gravity="center"
        android:text="@string/color_name_purple"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="34sp" />
</RelativeLayout>